add radio translate order life link

--- a/Project_sem_3/Views/Home/MedicalInsurance.cshtml
+++ b/Project_sem_3/Views/Home/MedicalInsurance.cshtml
@@ -209,7 +209,7 @@
     a {
         text-decoration: none;
         transition: all 0.15s ease-in-out;
-        color: #363636;
+        color: #0f75bd;
     }
 
     .main-content {
