--- a/Project_sem_3/Views/Home/HouseInsurance.cshtml
+++ b/Project_sem_3/Views/Home/HouseInsurance.cshtml
@@ -371,7 +371,7 @@
     a {
         text-decoration: none;
         transition: all 0.15s ease-in-out;
-        color: #363636;
+        color: #0f75bd;
     }
 
     .main-content {
