--- a/Project_sem_3/Views/HomeInsurance/Order.cshtml
+++ b/Project_sem_3/Views/HomeInsurance/Order.cshtml
@@ -102,9 +102,13 @@
                                 <label for="txtAddress" class="col-lg-4 col-sm-12 col-form-label col-form-label-first">HouseType</label>
                                 <input type="radio" name="HouseType" value="  Terrace houses / Villas
 " checked="checked" style="background:none;border:none;-webkit-appearance:radio" />
-                                Terrace houses / Villas
+                                Terrace houses 
 
-                                <input type="radio" name="HouseType" style="tyle=" background:none;border:none;-webkit-appearance:radio"" value="Apartment" />Apartment
+                                <input type="radio" name="HouseType" value="  Terrace houses / Villas
+" checked="checked" style="background:none;border:none;-webkit-appearance:radio" />
+                                Apartment
+
+                                @*<input type="radio" name="HouseType" style="tyle=" background:none;border:none;-webkit-appearance:radio"" value="Apartment" />Apartment*@
                             </div>
                         </div>
                         <div class="form-group divnone">
