--- a/Project_sem_3/Views/LifeInsurance/Order.cshtml
+++ b/Project_sem_3/Views/LifeInsurance/Order.cshtml
@@ -188,25 +188,25 @@
                             @*<option disabled="" value="">Nghề nghiệp</option>*@
                             <option disabled="" selected="" value="">Job</option>
                             <!---->
-                            <option value="1">Chủ doanh nghiệp</option>
+                            <option value="1">Business owners</option>
                             <option value="2">Nhân viên văn phòng</option>
-                            <option value="3">Kinh doanh cá thể</option>
-                            <option value="4">Nhân viên kinh doanh/ bán hàng</option>
-                            <option value="5">Giáo viên/ giảng viên</option>
-                            <option value="6">Bác sĩ/ nha sĩ/ dược sĩ</option>
-                            <option value="7">Kiến trúc sư/ họa viên kiến trúc</option>
-                            <option value="8">Kỹ sư xây dựng/ Kỹ sư trắc địa/ Kỹ sư hóa học</option>
-                            <option value="9">Nhân viên quản lý/ giám sát/ Quản đốc</option>
-                            <option value="10">Sinh viên</option>
-                            <option value="11">Hướng dẫn viên du lịch</option>
-                            <option value="12">Nhà báo/ Nhà văn/ Nhà thơ/ Phóng viên</option>
-                            <option value="13">Kỹ sư vận hành thiết bị/ giám sát thiết bị</option>
-                            <option value="14">Ca sĩ/ Nhạc sĩ/ Diễn viên/ Nhạc công/ Họa sĩ</option>
-                            <option value="15">Biên tập/ Dẫn chương trình/ Chủ nhiệm phim</option>
-                            <option value="16">Nhân viên chụp ảnh/ Nhân viên sửa máy ảnh</option>
-                            <option value="17">Kỹ sư giàn khoan </option>
-                            <option value="18">Đầu bếp</option>
-                            <option value="-1">Khác</option>
+                            <option value="3">Officer</option>
+                            <option value="4">Business man/sell</option>
+                            <option value="5">Teacher/lecturers</option>
+                            <option value="6">Doctor/dentist/ pharmacist</option>
+                            <option value="7">Architect/architectural artist</option>
+                            <option value="8">Construction engineer/Geodetic engineer/Chemical engineer</option>
+                            <option value="9">Management staff/ monitoring/ Manager</option>
+                            <option value="10">Student</option>
+                            <option value="11">Tour guide</option>
+                            <option value="12">Journalist/Writer/ Poet/ Reporter</option>
+                            <option value="13">Equipment operating engineer/ device monitoring</option>
+                            <option value="14">Singer/ Musician/ Cast/ Musician/ Artist</option>
+                            <option value="15">Editor/ MC/ Movie director</option>
+                            <option value="16">Staff photographed/ Camera repair staff</option>
+                            <option value="17">Rig engineer </option>
+                            <option value="18">Chef</option>
+                            <option value="-1">Other</option>
 
                         </select>
                     </div>
@@ -220,8 +220,8 @@
                             @*<input type="text" name="MaritalStatus" class="form-control" id="marital" autocomplete="off" placeholder="MaritalStatus">*@
                             <option disabled="" selected="" value="">Marital Status</option>
                             <!---->
-                            <option value="1">đã kết hôn </option>
-                            <option value="2"> chưa kết hôn </option>
+                            <option value="1">Married</option>
+                            <option value="2"> Not married</option>
 
                         </select>
                     </div>
@@ -1240,6 +1240,7 @@
                 });
             $("#formDemo").validate({
                 rules: {
+                   
 
                     Date_Iden: "required",
                     email: {
