--- a/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
@@ -48,7 +48,7 @@
                             <div col-md-8 col-12 style="margin-top: 2%; margin-left: 18%;">
                                 <div class="float-right mt-2 pr-4">
                                     <div id="reportrange" class="text-primary font-weight-bold" style="cursor: pointer; border-radius: 5px">
-                                        Chọn ngày:&nbsp;
+                                        Choose Time:&nbsp;
                                         <i class="fa fa-calendar text-dark"></i>&nbsp;
                                         <span class="text-dark font-weight-light"></span> <i class="fa fa-caret-down text-dark"></i>
                                     </div>
@@ -179,12 +179,12 @@
                                                 <div class="col-3 mt-2">
                                                     <div class="form-group mr-3">
                                                         <select class="form-control mr-2" id="select-action">
-                                                            <option value="6">--Chọn thao tác--</option>
+                                                            <option value="6">--Choose Action--</option>
                                                             <option value="0">Confirmed</option>
                                                             <option value="-1">Deleted</option>
                                                             <option value="2">Pay</option>
                                                             <option value="3">Done</option>
-                                                            <option value="4">All</option>
+                                                           
 
                                                         </select>
                                                     </div>
