--- a/Project_sem_3/Areas/Admin/Views/LifeInsurances/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/LifeInsurances/Index.cshtml
@@ -108,7 +108,7 @@
                                     <div class="col-3 mt-2">
                                         <div class="form-group mr-3">
                                             <select class="form-control mr-2" id="select-action" style="width: auto;">
-                                                <option value="6">--Chọn thao tác--</option>
+                                                <option value="6">--Choose Action--</option>
                                                 <option value="0">Confirmed</option>
                                                 <option value="-1">Deleted</option>
                                                 <option value="2">Pay</option>
