--- a/Project_sem_3/Areas/Admin/Views/MedicalInsurances/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/MedicalInsurances/Index.cshtml
@@ -24,7 +24,7 @@
                 <h6 class="m-0 font-weight-bold text-primary">Information Contract</h6>
             </div>
             <div class="card-body">
-                <div class="table-responsive">
+                <div class="table">
                     <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
                         <div class="row"><div class="col-sm-12 col-md-6"><div class="dataTables_length" id="dataTable_length">@*<label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label>*@</div></div><div class="col-sm-12 col-md-6">@*<div id="dataTable_filter" class="dataTables_filter"><label>Search:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="dataTable"></label></div>*@</div></div>
                         <div class="row">
@@ -33,7 +33,7 @@
                                     <thead>
 
                                         <tr>
-                                            <th rowspan="1" colspan="1">ApplicationUserId</th>
+                                          
                                             <th rowspan="1" colspan="1">InsurancePackage</th>
                                             <th rowspan="1" colspan="1">Programme</th>
                                             <th rowspan="1" colspan="1">Name</th>
@@ -41,7 +41,6 @@
                                             <th rowspan="1" colspan="1">DateOfBirth</th>
                                             <th rowspan="1" colspan="1">Quantity</th>
                                             <th rowspan="1" colspan="1">UnitPrice</th>
-                                            <th rowspan="1" colspan="1">Action</th>
                                         </tr>
                                     </thead>
 
@@ -55,7 +54,7 @@
 
                                             <tr role="row" class="odd">
 
-                                                <td>@item.Contract.ApplicationUserId</td>
+                                            
                                                 <td>@item.InsurancePackage.Name</td>
                                                 <td>@item.Programme.Name</td>
                                                 <td>@item.Name</td>
@@ -63,32 +62,31 @@
                                                 <td>@item.DateOfBirth</td>
                                                 <td>@item.Quantity</td>
                                                 <td>$@item.UnitPrice</td>
-                                                <td>
-                                                    <div class="card-footer">
-                                                        <div class="row mt-3">
-                                                            <div class="col-3 mt-2">
-                                                                <div class="form-group mr-3">
-                                                                    <select class="form-control mr-2" id="select-action" style="width: 100px;">
-                                                                        <option value="6">--Chọn thao tác--</option>
-                                                                        <option value="0">Confirmed</option>
-                                                                        <option value="-1">Deleted</option>
-                                                                        <option value="2">Pay</option>
-                                                                        <option value="3">Done</option>
-                                                                        <option value="4">All</option>
-
-                                                                    </select>
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-9" style="margin-top: 8px;">
-                                                                <button type="button" id="action_contract" class="btn btn-success" style="float: right;">Confirm</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </td>
+                                                
                                             </tr>
                                         }
                                     </tbody>
-                                </table>
+                                </table> 
+                                <div class="card-footer">
+                                    <div class="row mt-3">
+                                        <div class="col-3 mt-2">
+                                            <div class="form-group mr-3">
+                                                <select class="form-control mr-2" id="select-action">
+                                                    <option value="6">--Choose Action--</option>
+                                                    <option value="0">Confirmed</option>
+                                                    <option value="-1">Deleted</option>
+                                                    <option value="2">Pay</option>
+                                                    <option value="3">Done</option>
+                                                    <option value="4">All</option>
+
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-9" style="margin-top: 8px;">
+                                            <button type="button" id="action_contract" class="btn btn-success">Confirm</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div><div class="row"><div class="col-sm-12 col-md-5">@*<div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div>*@</div><div class="col-sm-12 col-md-7">@*<div class="dataTables_paginate paging_simple_numbers" id="dataTable_paginate"><ul class="pagination"><li class="paginate_button page-item previous disabled" id="dataTable_previous"><a href="#" aria-controls="dataTable" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li><li class="paginate_button page-item active"><a href="#" aria-controls="dataTable" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="3" tabindex="0" class="page-link">3</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="4" tabindex="0" class="page-link">4</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="5" tabindex="0" class="page-link">5</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="6" tabindex="0" class="page-link">6</a></li><li class="paginate_button page-item next" id="dataTable_next"><a href="#" aria-controls="dataTable" data-dt-idx="7" tabindex="0" class="page-link">Next</a></li></ul></div>*@</div></div>
                     </div>
