--- a/Project_sem_3/Areas/Admin/Views/MotorInsurances/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/MotorInsurances/Index.cshtml
@@ -23,7 +23,7 @@
                 <h6 class="m-0 font-weight-bold text-primary">Information Contract</h6>
             </div>
             <div class="card-body">
-                <div class="table-responsive">
+                <div class="table">
                     <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
                         <div class="row"><div class="col-sm-12 col-md-6"><div class="dataTables_length" id="dataTable_length">@*<label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label>*@</div></div><div class="col-sm-12 col-md-6">@*<div id="dataTable_filter" class="dataTables_filter"><label>Search:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="dataTable"></label></div>*@</div></div>
                         <div class="row">
@@ -40,7 +40,6 @@
                                             <th rowspan="1" colspan="1">Duration</th>
                                             <th rowspan="1" colspan="1">Quantity</th>
                                             <th rowspan="1" colspan="1">UnitPrice</th>
-                                            <th rowspan="1" colspan="1">Action</th>
                                         </tr>
                                     </thead>
 
@@ -62,32 +61,32 @@
                                                 <td>@item.Duration</td>
                                                 <td>@item.Quantity</td>
                                                 <td>$@item.UnitPrice</td>
-                                                <td>
-                                                    <div class="card-footer">
-                                                        <div class="row mt-3">
-                                                            <div class="col-3 mt-2">
-                                                                <div class="form-group mr-3">
-                                                                    <select class="form-control mr-2" id="select-action" style="width: 100px;">
-                                                                        <option value="6">--Chọn thao tác--</option>
-                                                                        <option value="0">Confirmed</option>
-                                                                        <option value="-1">Deleted</option>
-                                                                        <option value="2">Pay</option>
-                                                                        <option value="3">Done</option>
-                                                                        <option value="4">All</option>
-
-                                                                    </select>
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-9" style="margin-top: 8px;">
-                                                                <button type="button" id="action_contract" class="btn btn-success" style="float: right;">Confirm</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </td>
+                                               
                                             </tr>
                                         }
-                                    </tbody>
-                                </table>
+                                    </tbody> 
+                                    
+                                </table> 
+                                <div class="card-footer">
+                                    <div class="row mt-3">
+                                        <div class="col-3 mt-2">
+                                            <div class="form-group mr-3">
+                                                <select class="form-control mr-2" id="select-action" >
+                                                    <option value="6">--Choose Action--</option>
+                                                    <option value="0">Confirmed</option>
+                                                    <option value="-1">Deleted</option>
+                                                    <option value="2">Pay</option>
+                                                    <option value="3">Done</option>
+                                                    <option value="4">All</option>
+
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-9" style="margin-top: 8px;">
+                                            <button type="button" id="action_contract" class="btn btn-success" >Confirm</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div><div class="row"><div class="col-sm-12 col-md-5">
                             @*<div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div>*@
