--- a/Project_sem_3/Areas/Admin/Views/Role/UsersWithRoles.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Role/UsersWithRoles.cshtml
@@ -54,7 +54,7 @@
                 <div class="col-3 mt-2">
                     <div class="form-group mr-3">
                         <select class="form-control mr-2" id="select-user">
-                            <option value="6">--Chọn thao tác--</option>
+                            <option value="6">--Choose Action--</option>
                             <option value="-1">Deleted</option>
                         </select>
                     </div>
