--- a/Project_sem_3/Views/Home/HouseInsurance.cshtml
+++ b/Project_sem_3/Views/Home/HouseInsurance.cshtml
@@ -528,7 +528,7 @@
     .banner {
         width: 100%;
         height: 600px;
-        background-image: url("https://www.boshers.co.uk/wp-content/uploads/2017/09/bigstock-197233384.jpg");
+        background-image: url("/Content/dummy/house_baner.jpg");
         background-position: center center;
         background-size: cover;
     }
