--- a/Project_sem_3/Views/Home/Index.cshtml
+++ b/Project_sem_3/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="hero hero-slider">
     <ul class="slides">
         @*<li data-bg-image="/Content/dummy/slide-1.jpg">*@
-        <li style="width:100px" data-bg-image="https://www.homesteadins.com/wp-content/uploads/2019/05/homeowners-insurance-ohio.jpg">
+        <li style="width:100px" data-bg-image="/Content/dummy/home_1.jpg">
             <div class="container">
                 <div class="slide-content">
                     <h2 class="slide-title">Get your <strong>House Insurance</strong></h2>
@@ -27,7 +27,7 @@
             </div>
         </li>
         @*<li data-bg-image="/Content/dummy/slide-3.jpg">*@
-        <li data-bg-image="https://www.nyoooz.com/moxie_uploads/benefits-of-two-wheeler-insurance-renewal.jpg">
+        <li data-bg-image="/Content/dummy/home_2.jpg">
             <div class="container">
                 <div class="slide-content">
                     <h2 class="slide-title">Get your <strong>Motor Insurance</strong></h2>
@@ -37,7 +37,7 @@
             </div>
         </li>
 
-        <li data-bg-image="https://img.freepik.com/free-photo/hand-chooses-emoticon-icons-healthcare-medical-symbol-wooden-block-healthcare-medical-insurance-concept_39665-204.jpg?size=626&ext=jpg">
+        <li data-bg-image="/Content/dummy/home_3.jpg">
             <div class="container">
                 <div class="slide-content">
                     <h2 class="slide-title">Get your <strong>Medical Insurance</strong></h2>
