--- a/Project_sem_3/Views/Home/MedicalInsurance.cshtml
+++ b/Project_sem_3/Views/Home/MedicalInsurance.cshtml
@@ -153,8 +153,9 @@
                             @*<a href="https://localhost:44362/HealthInsurance/Information">CHARGE & ORDER</a>*@
                             <button style="background-color:crimson;color:white" onclick="location.href='/MedicalInsurance/Order'" type="button">
                                 Charge & Order
+                               </button>
 
-                        </div>
+</div>
                     </div>
                     <div><iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fbaohiemtructuyen.com.vn%2F&width=174&layout=button_count&action=like&size=large&share=true&height=46&appId" width="174" height="46" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe></div>
                 </div>
@@ -183,7 +184,7 @@
     .banner {
         width: 100%;
         height: 600px;
-        background-image: url("https://opisy-gg.com/wp-content/uploads/2019/11/Medical-Insurance-Mental.jpg");
+        background-image: url("/Content/dummy/Medical_baner.jpg");
         background-position: center center;
         background-size: cover;
     }
