--- a/Project_sem_3/Views/Home/lifeInsurance.cshtml
+++ b/Project_sem_3/Views/Home/lifeInsurance.cshtml
@@ -239,7 +239,7 @@
     .banner {
         width: 100%;
         height: 600px;
-        background-image: url(https://www.wishpolicy.com/wp-content/uploads/2019/11/Life-insurance.jpg);
+        background-image: url(/Content/dummy/Life_Insurance_banner.jpg);
         background-position: center center;
         background-size: cover;
     }
