--- a/Project_sem_3/Views/LifeInsurance/Order.cshtml
+++ b/Project_sem_3/Views/LifeInsurance/Order.cshtml
@@ -28,7 +28,7 @@
                                 <i _ngcontent-c5="" class="icon icon-benefit icon-benefit-shield"></i>
                             </div>
                             <div _ngcontent-c5="" class="benefit-image full-cover" style="background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.22) 100%),
- url('https://res.cloudinary.com/quotellc/image/upload/insurance-site-images/effortlessins-live/2019/06/whole-life-insurance-cost.png')">
+ url('/Content/dummy/Package_Life_Insurance.jpg')">
                                 <div _ngcontent-c5="" class="benefit-name-wrapper v-middle">
                                     <h2 _ngcontent-c5="" class="benefit-name">
                                         <div _ngcontent-c5="" class="app-checkbox agree-with-term">
