--- a/Project_sem_3/Views/HomeInsurance/Order.cshtml
+++ b/Project_sem_3/Views/HomeInsurance/Order.cshtml
@@ -41,7 +41,7 @@
                                                         <i _ngcontent-c5="" class="icon icon-benefit icon-benefit-shield"></i>
                                                     </div>
                                                     <div _ngcontent-c5="" class="benefit-image full-cover" style="background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.22) 100%),
- url('https://thumbs.dreamstime.com/b/property-insurance-cardboard-house-miniature-hands-property-insurance-small-cardboard-house-miniature-hands-142689555.jpg')">
+ url('/Content/dummy/Package_House_Order.jpg')">
                                                         <div _ngcontent-c5="" class="benefit-name-wrapper v-middle">
                                                             <h2 _ngcontent-c5="" class="benefit-name">
                                                                 <div _ngcontent-c5="" class="app-checkbox agree-with-term">
@@ -876,7 +876,7 @@
     .banner {
         width: 100%;
         height: 600px;
-        background-image: url(https://assuredfinancialwellness.com.au/wp-content/uploads/2019/11/shutterstock_627812210.jpg);
+        background-image: url(/Content/dummy/house_order_banner.jpg);
         background-position: center center;
         background-size: cover;
     }
