--- a/Project_sem_3/Views/MedicalInsurance/Order.cshtml
+++ b/Project_sem_3/Views/MedicalInsurance/Order.cshtml
@@ -794,7 +794,7 @@
                                             <i _ngcontent-c5="" class="icon icon-benefit icon-benefit-shield"></i>
                                         </div>
                                         <div _ngcontent-c5="" class="benefit-image full-cover" style="background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.22) 100%),
- url('https://cdn.hsbc.com.vn/content/dam/hsbc/hbvn/images/21-9/HSBC_MCI_1240X400.jpg')">
+ url('/Content/dummy/Package_Medical_Order.jpg')">
                                             <div _ngcontent-c5="" class="benefit-name-wrapper v-middle">
                                                 <h2 _ngcontent-c5="" class="benefit-name">
                                                     <div _ngcontent-c5="" class="app-checkbox agree-with-term">
@@ -1479,7 +1479,7 @@
     .banner {
         width: 100%;
         height: 600px;
-        background-image: url(https://api.visitjeju.net/editorStore/file/201911/28/3c6fb3fc-4b5c-4fd7-b924-10d45da3e22b.jpg);
+        background-image: url('/Content/dummy/Medical_Order.jpg');
         background-position: center center;
         background-size: cover;
         max-width: 100%;
