--- a/Project_sem_3/Views/MotorInsurance/Order.cshtml
+++ b/Project_sem_3/Views/MotorInsurance/Order.cshtml
@@ -113,7 +113,7 @@
                                                     <i _ngcontent-c5="" class="icon icon-benefit icon-benefit-shield"></i>
                                                 </div>
                                                 <div _ngcontent-c5="" class="benefit-image full-cover" style="background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.22) 100%),
- url('https://www.bennetts.co.uk/-/media/bikesocial/2019-august-images/uk-tracks-guide/cadwell-(1).ashx?h=493&w=740&la=en&hash=74B61E83CA91B386609F7AD25BAF41EFC015C3A6')">
+ url('/Content/dummy/Package_Motor_Order.jpg')">
                                                     <div _ngcontent-c5="" class="benefit-name-wrapper v-middle">
                                                         <h2 _ngcontent-c5="" class="benefit-name">
                                                             <div _ngcontent-c5="" class="app-checkbox agree-with-term">
@@ -708,7 +708,7 @@
     .banner {
         width: 100%;
         height: 600px;
-        background-image: url("https://www.axa.ie/images/product/motorcycle-handlebars-banner.jpg");
+        background-image: url("/Content/dummy/motor_order.jpg");
         background-position: center center;
         background-size: cover;
     }
