--- a/Project_sem_3/Views/LifeInsurance/Order.cshtml
+++ b/Project_sem_3/Views/LifeInsurance/Order.cshtml
@@ -51,7 +51,7 @@
                                                 </p>
                                             </div>
                                             <div _ngcontent-c5="" class="col-xs-8">
-                                                <p _ngcontent-c5="" class="item-value" style="color: black;">
+                                                <p _ngcontent-c5="" class="item-value" style="color: #768089;">
                                                     <span _ngcontent-c5="" style="font-weight: bold;background: white;">@Html.Raw(HttpUtility.HtmlDecode(item.Description))</span>
                                                 </p>
                                             </div>
@@ -66,7 +66,7 @@
                                             </div>
                                             <div _ngcontent-c5="" class="col-xs-8">
                                                 <p _ngcontent-c5="" class="item-value">
-                                                    <span _ngcontent-c5="" style="font-weight: bold;background: white;">$@item.Price/year</span>
+                                                    <span _ngcontent-c5="" style="font-weight: bold;background: white;color:#ea212d">$@item.Price/year</span>
                                                 </p>
                                             </div>
                                         </div>
@@ -481,7 +481,7 @@
 
     .benefit-item.benefit-item-description-table .benefit-description-table .item {
         padding: 14px 0;
-        font-size: 14px;
+        font-size: 16px!important;
         line-height: 20px;
     }
 
@@ -539,7 +539,7 @@
 
     .app-checkbox input:checked, .app-checkbox input:not(:checked) {
         position: absolute;
-        left: 91px;
+        left: 23px;
         background-color: white;
         top: -4px;
     }
