--- a/Project_sem_3/Views/MedicalInsurance/Order.cshtml
+++ b/Project_sem_3/Views/MedicalInsurance/Order.cshtml
@@ -428,7 +428,7 @@
 
     .benefit-item.benefit-item-description-table .benefit-description-table .item {
         padding: 14px 0;
-        font-size: 14px;
+        font-size: 16px !important;
         line-height: 20px;
     }
 
@@ -817,7 +817,7 @@
                                                             </p>
                                                         </div>
                                                         <div _ngcontent-c5="" class="col-xs-8">
-                                                            <p _ngcontent-c5="" class="item-value" style="color: black;">
+                                                            <p _ngcontent-c5="" class="item-value" style="color: #768089;">
 
                                                                 <span _ngcontent-c5="" style="font-weight: bold;background: white;">@Html.Raw(HttpUtility.HtmlDecode(item.Description))</span>
                                                             </p>
@@ -834,7 +834,7 @@
                                                         </div>
                                                         <div _ngcontent-c5="" class="col-xs-8">
                                                             <p _ngcontent-c5="" class="item-value">
-                                                                <span _ngcontent-c5="" style="font-weight: bold;background: white;">$@item.Price/year</span>
+                                                                <span _ngcontent-c5="" style="font-weight: bold;background: white;color:#ea212d">$@item.Price/year</span>
                                                             </p>
                                                         </div>
                                                     </div>
