--- a/Project_sem_3/Views/MotorInsurance/Order.cshtml
+++ b/Project_sem_3/Views/MotorInsurance/Order.cshtml
@@ -137,7 +137,7 @@
                                                                     </p>
                                                                 </div>
                                                                 <div _ngcontent-c5="" class="col-xs-8">
-                                                                    <p _ngcontent-c5="" class="item-value" style="color: black;">
+                                                                    <p _ngcontent-c5="" class="item-value" style="color: #768089;">
                                                                         <span _ngcontent-c5="" style="font-weight: bold;background: white;">
                                                                         @Html.Raw(HttpUtility.HtmlDecode(item.Description))
                                                                         </span>
@@ -154,7 +154,7 @@
                                                                 </div>
                                                                 <div _ngcontent-c5="" class="col-xs-8">
                                                                     <p _ngcontent-c5="" class="item-value">
-                                                                        <span _ngcontent-c5="" style="font-weight: bold;background: white;">$@item.Price/year</span>
+                                                                        <span _ngcontent-c5="" style="font-weight: bold;background: white;color:#ea212d">$@item.Price/year</span>
                                                                     </p>
                                                                 </div>
                                                             </div>
@@ -481,7 +481,7 @@
 
     .benefit-item.benefit-item-description-table .benefit-description-table .item {
         padding: 14px 0;
-        font-size: 14px;
+        font-size: 16px!important;
         line-height: 20px;
     }
 
